style.css
.container {
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 10px;
	line-height: normal;
}
.navcontainer {
	display: flex;
	align-items: left;
	justify-content: left;
	gap: 10px;
    margin-top:5px;
}
.navcontainercent {
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 10px;
    margin-top:5px;
}

body {
  background-color: #442288;
}

.flex-container {
  	display: flex;
}

nav {
    background-color: #808080;
    border: 3px solid #707070;
    border-radius: 4px;
    box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
    color: #888;
    display: block;
    margin: 8px 22px 8px 22px;
    overflow: hidden;
    width: 100%;
    padding: 0;
}
.right {
  display: block;
  margin-left: auto;
}


.flex-container > div {
  background-color: #023535;
  color: white;
  width: 100px;
  margin: 10px;
  text-align: center;
  font-size: 30px;
  border: 6px solid #294856;
  border-radius: 35px;
  margin-top:10px;
  margin-bottom:-25px;
}
@font-face {
	font-family: nasalizationregular;
	src: url("font.ttf");
	font-weight: normal;
	font-style: normal;
}

.center{
  margin: auto;
}

a:link {
	font-family: 'nasalizationregular', Arial, sans-serif;
	font-weight:normal;
	font-style:normal;
	color: #fff;
}
a:visited {
	font-family: 'nasalizationregular', Arial, sans-serif;
	font-weight:normal;
	font-style:normal;
	color: #442288;
}
h1 {
	font-family: 'nasalizationregular', Arial, sans-serif;
	font-weight:normal;
	font-style:normal;
	color: #000;
  	font-size: 25px;
}
p {
	font-family: 'nasalizationregular', Arial, sans-serif;
	font-weight:normal;
	font-style:normal;
	color: #000;
  	font-size: 15px;
}

